Update current work

--- a/index.html
+++ b/index.html
@@ -15,81 +15,74 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-		<body>
-			<div id="wrapper">
-					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
-						<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
-						<a href="#Store" class="icon solid fa-store"><span>Store</span></a>
-						<a href="#Contact" class="icon fa-address-card"><span>Contact</span></a>
-					</nav>
-					<div id="main">
-							<article id="home" class="panel intro">
-								<header>
-									<h1>Gideon Victor</h1>
-									<p>Business Intelligence Developer</p>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/beach.webp" alt="" />
-								</a>
-							</article>
-						<!-- Work -->
-						<article id="work" class="panel intro">
-							<header>
-								<h1>Work</h1>
-								<p>Currently, I am working on aggregating tax and geographical information for the City of Mission Viejo to help direct public funds most efficiently. Pictured is a data-visualization of property tax per acre in the city for a mix of commercial and residential parcels.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
-							</header>
-							<a href="#LinkedIn" class="jumplink pic">
-								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-								<img src="images/mission.webp" alt="" />
-							</a>
-						</article>
-						<article id="LinkedIn" class="panel intro">
-							<header>
-								<h1>Resume</h1>
-								<p>I am a SQL Developer currently working at BootBarn in Orange County, CA.<br />
-								<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
-							</header>
-							<a href="#Store" class="jumplink pic">
-								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-								<img src="images/hockey.webp" alt="" />
-							</a>
-						</article>
-						<article id="Store" class="panel intro">
-							<header>
-								<h1>Store</h1>
-								<p>I usually have things for sale. See the link below.<br />
-								<a href="https://www.ebay.com/sch/missionviejocompany/m.html" target="_blank"><i class="icon brands fa-ebay"></i> Ebay</a></p>
-							</header>
-							<a href="#Contact" class="jumplink pic">
-								<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-								<img src="images/baseball.webp" alt="" />
-							</a>
-						</article>
-								<article id="Contact" class="panel">
-									<section>
-										<div class="row">
-											<div class="col-12">
-												<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaD4Yh_y34hmqwgksxibRnZvOPJLirugd1MtU_8CIGZtcV5g/viewform?embedded=true" width=100% height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-											</div>
-										</div>
-									</section>
-								</article>
-					</div>
+	<body>
+		<div id="wrapper">
+				<nav id="nav">
+					<a href="#" class="icon solid fa-home"><span>Home</span></a>
+					<a href="#work" class="icon brands fa-github"><span>GitHub</span></a>
+					<a href="#LinkedIn" class="icon brands fa-linkedin"><span>LinkedIn</span></a>
+					<a href="#Store" class="icon solid fa-store"><span>Store</span></a>
+					<a href="#Contact" class="icon fa-address-card"><span>Contact</span></a>
+				</nav>
+				<!-- Main -->
+				<div id="main">
+					<!-- Home -->
+					<article id="home" class="panel intro">
+						<header>
+							<h1>Gideon Victor</h1>
+							<p>Business Intelligence Developer</p>
+						</header>
+						<a href="#work" class="jumplink pic">
+							<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+							<img src="images/beach.webp" alt="" />
+						</a>
+					</article>
+					<!-- Work -->
+					<article id="work" class="panel intro">
+						<header>
+							<h1>Work</h1>
+							<p>Currently, I am working on aggregating tax and geographical information for the City of Mission Viejo to help direct public funds most efficiently. Pictured is a data-visualization of property tax per acre in the city for a mix of commercial and residential parcels.<a href="https://github.com/gideonvictor" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+						</header>
+						<a href="#LinkedIn" class="jumplink pic">
+							<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+							<img src="images/mission.webp" alt="" />
+						</a>
+					</article>
+					<!-- Resume -->
+					<article id="LinkedIn" class="panel intro">
+						<header>
+							<h1>Resume</h1>
+							<p>I am a Python and SQL Developer currently working at Green Street Advisors in Orange County, CA.<br />
+							<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
+						</header>
+						<a href="#Store" class="jumplink pic">
+							<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+							<img src="images/baseball.webp" alt="" />
+						</a>
+					</article>
+					<!-- Contact -->
+					<article id="Contact" class="panel">
+						<section>
+							<div class="row">
+								<div class="col-12">
+									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaD4Yh_y34hmqwgksxibRnZvOPJLirugd1MtU_8CIGZtcV5g/viewform?embedded=true" width=100% height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+								</div>
+							</div>
+						</section>
+					</article>
+				</div>
 				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li><a href="https://presentation.gideonvictor.com" target="_blank">Presentations</a></li>
-						</ul>
-					</div>
-			</div>
+				<div id="footer">
+					<ul class="copyright">
+						<li><a href="https://presentation.gideonvictor.com" target="_blank">Presentations</a></li>
+					</ul>
+				</div>
+		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
