fixing broken link.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<p>I am a Python and SQL Developer currently working at Green Street Advisors in Orange County, CA.<br />
 							<a href="https://www.linkedin.com/in/gideonvictor/" target="_blank"><i class="icon brands fa-linkedin"></i> LinkedIn</a></p>
 						</header>
-						<a href="#Store" class="jumplink pic">
+						<a href="#Contact" class="jumplink pic">
 							<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 							<img src="images/baseball.webp" alt="" />
 						</a>
