--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		  gtag('config', 'UA-180528799-1');
 		</script>
 		<title>Gideon Victor</title>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
