--- a/index.html
+++ b/index.html
@@ -62,13 +62,30 @@
 					</article>
 					<!-- Contact -->
 					<article id="Contact" class="panel">
-						<section>
-							<div class="row">
-								<div class="col-12">
-									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfaD4Yh_y34hmqwgksxibRnZvOPJLirugd1MtU_8CIGZtcV5g/viewform?embedded=true" width=100% height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<header>
+							<h2>Contact Me</h2>
+						</header>
+						<form target="_self" action="https://formsubmit.co/q+form@gideonvictor.com" method="post">
+							<div>
+								<div class="row">
+									<div class="col-6 col-12-medium">
+										<input type="text" name="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-medium">
+										<input type="text" name="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" placeholder="Message" rows="6"></textarea>
+									</div>
+									<div class="col-12">
+										<input type="submit" value="Send Message" />
+									</div>
 								</div>
 							</div>
-						</section>
+						</form>
 					</article>
 				</div>
 				<!-- Footer -->
