--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<header>
 							<h2>Contact Me</h2>
 						</header>
-						<form target="_self" action="https://formsubmit.co/q+form@gideonvictor.com" method="post">
+						<form target="_self" action="https://formsubmit.co/q@gideonvictor.com" method="post">
 							<div>
 								<div class="row">
 									<div class="col-6 col-12-medium">
