--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<article id="home" class="panel intro">
 						<header>
 							<h1>Gideon Victor</h1>
-							<p>Business Intelligence Developer</p>
+							<p>Python/Business Intelligence Developer</p>
 						</header>
 						<a href="#work" class="jumplink pic">
 							<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
